tests/snapshots/deserializer__regexp_two_byte.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n/🗄️/"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: RegExp {
        pattern: TwoByte("🗄️"),
        flags: 0,
    },
}

