tests/snapshots/deserializer__set_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Set()"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Set {},
}

