tests/snapshots/deserializer__set_one_element.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Set([1])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Set {
        I32(
            1,
        ),
    },
}

