tests/snapshots/deserializer__set_two_elements.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Set([1, 2])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Set {
        I32(
            1,
        ),
        I32(
            2,
        ),
    },
}

