tests/snapshots/deserializer__sparse_array_empty_length_one.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Array(1)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: SparseArray(1) {},
}

