tests/snapshots/deserializer__sparse_array_one_element_length_one.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n\nconst arr = new Array(1);\narr[0] = 1;\narr\n"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: SparseArray(1) {
        0: I32(
            1,
        ),
    },
}

